Fixed thumbnail not showing for spotify

--- a/config/style.css
+++ b/config/style.css
@@ -91,8 +91,6 @@ button * {
 }
 
 .Thumnbail {
-    border-radius: 12px;
-    box-shadow: 0 0 8px #585b70;
     margin-right: 10px;
 }
 
@@ -100,7 +98,6 @@ button * {
     background-color: #1e1e2e;
     border: 2px solid #cba6f7;
     border-radius: 12px;
-    padding: 6px;
     margin: 4px;
     box-shadow: inset 0 0 5px #6c7086;
 }
